[project]
name = "ComfyUI-TBG-takeaways"
description = "A curated set of reusable ComfyUI nodes created by TGB, these sidecodes capture major advances in model sampling, noise scheduling, and image refinement to enhance stable diffusion workflows. All nodes in this pack are extracted from micro-developments created during the development of TBG ETUR. They’ve been turned into standalone “micro nodes” for testing purposes and for anyone who enjoys experimenting with them."
version = "1.0.5"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = [""]

[project.urls]
Repository = "https://github.com/Ltamann/ComfyUI-TBG-SAM3"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Ltamann/ComfyUI-TBG-Takeaways/wiki"
"Bug Tracker" = "https://github.com/Ltamann/ComfyUI-TBG-Takeaways/issues"

[tool.comfy]
PublisherId = "tbg"
DisplayName = "ComfyUI-TBG-takeaways"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

