[project]
name = "ComfyUI-TBG-Takeaways"
description = "A curated set of reusable ComfyUI nodes created by TBG. These sidecodes capture major advances in model sampling, noise scheduling, and image refinement to enhance Stable Diffusion workflows. All nodes in this pack are extracted from micro-developments created during the TBG ETUR project. They have been converted into standalone “micro nodes” for testing and for anyone interested in experimenting with advanced ComfyUI techniques."
version = "1.0.0"
license = { file = "LICENSE" }

dependencies = [
  "# Core ComfyUI dependencies (already in ComfyUI, no need to reinstall)"
]

[project.urls]
Repository = https://github.com/Ltamann/ComfyUI-TBG-Takeaways"
Documentation = "https://github.com/Ltamann/ComfyUI-TBG-Takeaways/wiki"
"Bug Tracker" = "https://github.com/Ltamann/ComfyUI-TBG-Takeaways/issues"

[tool.comfy]
PublisherId = "tbg"
DisplayName = "ComfyUI-TBG-Takeaways"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility


